--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,186 +28,192 @@
         }
 
         .header-text {
-            font-size: 16px;
-            color: #000000; /* Black color */
-            font-weight: bold; /* Bold text */
-            margin-bottom: 10px;
+            font-size: 14px;
+            color: #000000;
+            font-weight: bold;
+            margin-bottom: 15px;
         }
 
         #saveButton {
             background-color: green;
             color: white;
-            padding: 10px 20px;
+            padding: 12px 24px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             margin-top: 10px;
+            font-weight: bold;
         }
 
         #srtContent {
             width: 100%;
             height: 200px;
             margin-top: 10px;
+            box-sizing: border-box;
+            resize: none;
         }
 
         .color-buttons {
-            margin-bottom: 20px; /* Space between color buttons and file input */
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            gap: 15px;
         }
 
         .color-buttons button {
-            margin-right: 10px;
-            padding: 10px 20px;
-            border: 2px solid #ffffff; /* Default border color */
+            padding: 10px 25px;
+            border: 2px solid transparent;
             cursor: pointer;
             font-weight: bold;
-            background-color: #ffffff; /* Default background color */
-            color: #000000; /* Default text color */
-            opacity: 0.5; /* Default opacity */
-            transition: all 0.3s ease; /* Transition effect */
+            background-color: #ffffff;
+            color: #000000;
+            opacity: 0.5;
+            transition: all 0.3s ease;
+            border-radius: 5px;
         }
 
         .color-buttons button.selected {
-            opacity: 1; /* Fully opaque */
-            border: 3px solid #ff0000; /* Red and thick border for selected button */
-        }
-
-        .color-buttons button:hover {
-            opacity: 0.8; /* Slightly more opaque on hover */
+            opacity: 1;
+            border: 3px solid #ff0000 !important;
         }
 
         .file-input-container {
-            margin-bottom: 20px; /* Space between file input and process button */
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
     <div id="container">
-        <div class="header-text">This tool separates only LARGE LETTERS sections in SRT files with timestamps. 
-            The Default button separates only the sections written in LARGE LETTERS with timestamps and saves them as existing filename+forced.srt. 
-            If the color is selected, it does the operation and saves as existing file name+selected color name+forced.srt..</div>
+        <div class="header-text">Separates lines containing uppercase letters or # with timestamps.
+         <div class="header-text">The Human mind is Gemini-made.</div>
         <h1>Cc-Extractor Selection</h1>
 
-        <!-- File input section -->
         <div class="file-input-container">
-            <label for="srtFile">Select SRT File:</label>
-            <input type="file" id="srtFile" accept=".srt">
+            <label for="srtFile">SRT Dosyası Seçin: </label>
+            <input type="file" id="srtFile" accept=".srt" autocomplete="off">
         </div>
 
-        <!-- Color buttons -->
         <div class="color-buttons">
-            <button id="defaultBtn" onclick="setColor('#cccccc', this)" style="background-color: #cccccc; color: #000000;">Default</button>
-            <button id="whiteBtn" onclick="setColor('#ffffff', this)" style="background-color: #ffffff; color: #000000;">White</button>
-            <button id="yellowBtn" onclick="setColor('#ffff00', this)" style="background-color: #ffff00; color: #000000;">Yellow</button>
+            <button id="defaultBtn" onclick="setMode('default', '#cccccc', this)" style="background-color: #cccccc;">Default</button>
+            <button id="yellowBtn" onclick="setMode('color', '#ffff00', this)" style="background-color: #ffff00;">Yellow</button>
+            <button id="songBtn" onclick="setMode('song', '#00ffff', this)" style="background-color: #00ffff;">Song</button>
         </div>
 
-        <!-- Process button -->
         <button id="saveButton" onclick="processSrt()">Process and Save</button><br><br>
 
-        <textarea id="srtContent" rows="10" cols="50" readonly></textarea>
+        <textarea id="srtContent" rows="10" cols="50" readonly placeholder="Sonuç burada görünecek..." autocomplete="off"></textarea>
     </div>
 
     <script>
-        let selectedColor = '#cccccc'; // Default color
+        // Sayfa yenilendiğinde her şeyi sıfırla
+        window.onload = function() {
+            document.getElementById('srtFile').value = "";
+            document.getElementById('srtContent').value = "";
+            setMode('default', '#cccccc', document.getElementById('defaultBtn'));
+        };
 
-        function setColor(color, button) {
+        let selectedColor = '#cccccc';
+        let currentMode = 'default';
+
+        function setMode(mode, color, button) {
+            currentMode = mode;
             selectedColor = color;
-            // Remove 'selected' class from all buttons
-            document.querySelectorAll('.color-buttons button').forEach(btn => {
-                btn.classList.remove('selected');
-                btn.style.backgroundColor = '#ffffff';
-                btn.style.color = '#000000';
-                btn.style.border = '2px solid #ffffff'; // Default border
-                btn.style.opacity = '0.5'; // Default opacity
-            });
-            // Update the clicked button's style
+            document.querySelectorAll('.color-buttons button').forEach(btn => btn.classList.remove('selected'));
             button.classList.add('selected');
-            button.style.backgroundColor = color || '#cccccc';
-            button.style.color = (color === '#ffffff' || !color) ? '#000000' : '#ffffff'; // Text color
-            button.style.border = '3px solid #ff0000'; // Red and thick border for selected button
-            button.style.opacity = '1'; // Fully opaque
         }
 
         function processSrt() {
-            var fileInput = document.getElementById('srtFile');
-            var srtContent = document.getElementById('srtContent');
-
-            if (!fileInput.files || !fileInput.files[0]) {
-                alert('Please select an SRT file.');
+            const fileInput = document.getElementById('srtFile');
+            if (!fileInput.files[0]) {
+                alert('Lütfen bir SRT dosyası seçin.');
                 return;
             }
 
-            var file = fileInput.files[0];
-            var reader = new FileReader();
-
-            reader.onload = function(event) {
-                var content = event.target.result;
-                var decodedContent = new TextDecoder('UTF-8').decode(content);
-
-                var processedContent = processAndSaveSrt(decodedContent, file.name);
-                srtContent.value = processedContent;
-            };
+            const file = fileInput.files[0];
+            const reader = new FileReader();
 
             reader.readAsArrayBuffer(file);
-        }
 
-        function processAndSaveSrt(srtContent, fileName) {
-            var lines = srtContent.split('\n');
-            var processedLines = [];
-            var currentTimecode = '';
+            reader.onload = function(e) {
+                const buffer = e.target.result;
+                let decoder = new TextDecoder('utf-8');
+                let content = decoder.decode(buffer);
 
-            for (var i = 0; i < lines.length; i++) {
-                var line = lines[i].trim();
-
-                if (line === '') {
-                    continue; // Skip empty lines
+                // Türkçe karakter koruması için hata kontrolü
+                if (content.includes('')) {
+                    decoder = new TextDecoder('windows-1254');
+                    content = decoder.decode(buffer);
                 }
 
-                if (line.match(/^\d{2}:\d{2}:\d{2},\d{3} --> \d{2}:\d{2}:\d{2},\d{3}$/)) {
-                    // If the line is a timecode, update the current timecode
-                    currentTimecode = line;
-                } else if (line === line.toUpperCase() && line !== line.toLowerCase()) {
-                    // If the line contains only uppercase letters and is not all lowercase
-                    // Add it to processed lines with the current timecode
-                    processedLines.push(currentTimecode + '\n' + `<font color="${selectedColor}">${line}</font>`);
-                }
-            }
-
-            // Join processed lines
-            var processedContent = processedLines.join('\n\n');
-
-            // Save processed content
-            var blob = new Blob([processedContent], {type: 'text/plain'});
-            var url = URL.createObjectURL(blob);
-            var a = document.createElement('a');
-            a.href = url;
-            // If a color is selected and it's not the default color, add color name to the file name, otherwise just append '_forced'
-            a.download = fileName.replace('.srt', '') + (selectedColor !== '#cccccc' ? '_' + getColorName(selectedColor) : '') + '_forced.srt'; 
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-            URL.revokeObjectURL(url);
-
-            return processedContent;
-        }
-
-        function getColorName(hexColor) {
-            const colorNames = {
-                '#ffff00': 'yellow',
-                '#ffffff': 'white'
+                const processed = filterLogic(content, file.name);
+                document.getElementById('srtContent').value = processed;
             };
-            return colorNames[hexColor] || 'unknown';
         }
 
-        // Remove border from color buttons when clicking outside of them
-        document.addEventListener('click', function(event) {
-            if (!event.target.closest('.color-buttons')) {
-                document.querySelectorAll('.color-buttons button').forEach(btn => {
-                    btn.classList.remove('selected');
-                    btn.style.border = '2px solid #ffffff'; // Default border
-                    btn.style.opacity = '0.5'; // Default opacity
-                });
+        function filterLogic(content, fileName) {
+            const lines = content.split(/\r?\n/);
+            let results = [];
+            let lastTime = "";
+            let counter = 1;
+
+            for (let i = 0; i < lines.length; i++) {
+                let line = lines[i].trim();
+
+                if (line.includes(' --> ')) {
+                    lastTime = line;
+                } 
+                else if (line !== '' && !/^\d+$/.test(line)) {
+                    let isMatch = false;
+
+                    if (currentMode === 'song') {
+                        if (line.includes('#')) isMatch = true;
+                    } else {
+                        // Büyük harf kontrolü (Tek harf dahil: "- A ." gibi)
+                        if (line === line.toLocaleUpperCase('tr-TR') && line !== line.toLocaleLowerCase('tr-TR')) {
+                            isMatch = true;
+                        }
+                    }
+
+                    if (isMatch && lastTime) {
+                        let text = line;
+                        if (currentMode !== 'default') {
+                            text = `<font color="${selectedColor}">${line}</font>`;
+                        }
+                        results.push(`${counter}\n${lastTime}\n${text}`);
+                        counter++;
+                    }
+                }
             }
-        });
+
+            const finalOutput = results.join('\n\n');
+            if (finalOutput) {
+                download(finalOutput, fileName);
+            } else {
+                alert("Kriterlere uygun metin bulunamadı!");
+            }
+            return finalOutput;
+        }
+
+        function download(data, name) {
+            const BOM = new Uint8Array([0xEF, 0xBB, 0xBF]);
+            const blob = new Blob([BOM, data], { type: "text/plain;charset=utf-8" });
+            const url = URL.createObjectURL(blob);
+            
+            let nameExt = "_forced";
+            if (currentMode === 'song') {
+                nameExt = "_song"; // forced ibaresini sildik
+            } else if (selectedColor === '#ffff00') {
+                nameExt = "_yellow_forced";
+            }
+
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = name.replace('.srt', '') + nameExt + ".srt";
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+            URL.revokeObjectURL(url);
+        }
     </script>
 </body>
 </html>
