--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h1>Cc-Extractor Selection</h1>
 
         <div class="file-input-container">
-            <label for="srtFile">SRT Dosyası Seçin: </label>
+            <label for="srtFile">Chose: </label>
             <input type="file" id="srtFile" accept=".srt" autocomplete="off">
         </div>
 
@@ -217,3 +217,4 @@
     </script>
 </body>
 </html>
+
