--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class="file-input-container">
             <label for="srtFile">Chose: </label>
-            <input type="file" id="srtFile" accept=".srt" autocomplete="off">
+            <input type="file" id="Select the file" accept=".srt" autocomplete="off">
         </div>
 
         <div class="color-buttons">
@@ -217,4 +217,5 @@
     </script>
 </body>
 </html>
+
 
