--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cc Extractor - Pro</title>
+    <title>Cc-Extractor Selection</title>
     <style>
         body {
             height: 100vh;
@@ -235,3 +235,4 @@
     </script>
 </body>
 </html>
+
